--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <!-- Footer Section -->
 <footer>
     <div class="footer-content">
-        <p>&copy; 2024 YourCompany. All rights reserved.</p>
+        <p>&copy; 2024 TrendWear. All rights reserved.</p>
         <ul class="social-links">
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
